Remove acentos e ajustes de lint